deploy/web-server-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: web-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - name: web-server
          image: rejdeboer.azurecr.io/web-server:2b5262e742eb84a8e17545a2a20a13812e20d6c9
          resources:
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
