deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mmo
  namespace: default
  annotations:
    cert-manager.io/issuer: letsencrypt 
    nginx.ingress.kubernetes.io/force-ssl-redirect: true
    kubernetes.io/ingress.class: "traefik" 
spec:
  ingressClassName: nginx
  rules:
    - host: mmo.homelab.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-server
                port:
                  number: 80
  # tls:
  #   - secretName: letsencrypt-nginx-tls
  #     hosts:
  #       - mmo.homelab.io
